--- a/templates/password_reset_confirm.html
+++ b/templates/password_reset_confirm.html
@@ -12,5 +12,5 @@
 </form>
 {%else %}
 <p>The password reset link was invalid,possibly because it has already been used. Please request a new password reset.</p>
-{& endif %}
+{%% endif %}
 {% endblock %}
