--- a/templates/register.html
+++ b/templates/register.html
@@ -80,7 +80,7 @@
                 <button type="submit" class="btn btn-primary btn-block">Submit and Continue</button>
                 <div class="text-center mt-3">
                     <p>Already Registered?</p>
-                    <button type="button" class="btn btn-secondary" onclick="window.location.href='{% url 'login' %}';">Login</button>
+                    <button type="button" class="btn btn-secondary" onclick="window.location.href='{% url 'login_voter' %}';">Login</button>
                 </div>
             </form>
         </section>
