forgot password and unique id setup

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,7 +40,7 @@
                 <div class="details">
                     <p><strong>Unique Id :</strong> {{ user.unique_id }}</p>
                     <p><strong>Name :</strong> {{ user.name }} </p>
-                    <p><strong>Age : </strong>{{ user.age }}</p>
+                    {% comment %} <p><strong>Age : </strong>{{ user.age }}</p> {% endcomment %}
                     <p><strong>Email :</strong> {{ user.email }}</p>
                     <p><strong>Phone no :</strong> {{ user.phone }}</p>
                 </div>
