--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
                 <div class="input-group">
                     <i class="fa fa-user"></i>
                     <input type="text" id="unique_id" name="unique_id" placeholder="Enter Unique ID" required>
-                    <button class="small-btn" type="button">Know your Unique ID</button>
+                    <button class="small-btn" type="button" onclick="window.location.href='{% url 'unique_id' %}';">Know your Unique ID</button>
                 </div>
 
                 <label for="password">Password</label>
