after final touchup

--- a/templates/voting_success.html
+++ b/templates/voting_success.html
@@ -15,7 +15,7 @@
     <p class="success-text">Your Vote has been successfully recorded 🎉</p>
 
     <div class="vote-info">
-      <div class="info-row"><span>Candidate Selected :</span> <span>{{Candidate Name}}</span></div>
+      <div class="info-row"><span>Candidate Selected :</span> <span>{{ candidate_name }}</span></div>
       <div class="info-row"><span>Transaction Id :</span> <span>{{ transaction_id}}</span></div>
       <div class="info-row"><span>Date And Time :</span> <span>{{ date_time }}></span></div>
     </div>
